# Triathlon

./: .gitignore  README.md  init.sh
npc/csrc/: CMakeLists.txt  main.cpp  npc_main.cpp  test_backend.cpp  test_bpu.cpp  test_bpu_phase5_red.cpp  test_build_config.cpp  test_data_array.cpp  test_dcache.cpp  test_decoder.cpp  test_execute.cpp  test_frontend.cpp  test_ibuffer.cpp  test_icache.cpp  test_ifu.cpp  test_issue.cpp  test_lsu.cpp  test_sram.cpp  test_tag_array.cpp  test_triathlon.cpp
npc/csrc/cpu/: cpu-exec.c
npc/csrc/include/: args_parser.h  boot_loader.h  difftest_client.h  memory_models.h  platform_contract.h  profile_collector.h  trap_decode.h
npc/csrc/isa/: reg.c
npc/csrc/lib/: args_parser.cpp  difftest_client.cpp  profile_collector_runtime.cpp  profile_collector_stall.cpp  profile_collector_summary.cpp
npc/csrc/logger/: logger.cpp  logger.h  snapshot.cpp  snapshot.h
npc/csrc/memory/: paddr.c  vaddr.c
npc/csrc/monitor/: monitor.c
npc/csrc/test/: test_backend.cpp  test_backend_mmu_dcache_mux.cpp  test_boot_handoff.cpp  test_bpu.cpp  test_bpu_phase5_red.cpp  test_bpu_tage.cpp  test_bpu_tournament.cpp  test_build_config.cpp  test_bundle_fifo.cpp  test_compressed_decoder.cpp  test_dcache.cpp  test_decoder.cpp  test_execute.cpp  test_frontend.cpp  test_ibuffer.cpp  test_icache.cpp  test_ifu_mmu.cpp  test_issue.cpp  test_issue_single.cpp  test_loop_predictor.cpp  test_lsu.cpp  test_platform_contract.cpp  test_plic.cpp  test_privilege_csr.cpp  test_rob_exception.cpp  test_sc_l.cpp  test_sv32_mmu.cpp  test_tag_array.cpp  test_tage.cpp  test_trap_ctrl.cpp  (+5 more)
(+245 files in other folders)
